@@ -1,4 +1,5 @@
 * Clock combining algorithm improvements from Dave Mills.
+* Documentation updates from Dave Mills.
 * [Bug 1642] ntpdsim can't find simulate block in config file.
 (4.2.7p55) 2010/09/22 Released by Harlan Stenn <stenn@ntp.org>
 * Documentation updates from Dave Mills.
